[gd_scene load_steps=7 format=3 uid="uid://cgnmt3h3ct1t"]

[ext_resource type="Script" path="res://globals/game_over.gd" id="1_42437"]
[ext_resource type="FontFile" uid="uid://bqquveyf4uley" path="res://assets/fonts/flappyfont.TTF" id="2_mx0mp"]
[ext_resource type="Theme" uid="uid://d1su8r35kvrol" path="res://button_theme.tres" id="3_mcyia"]

[sub_resource type="Animation" id="Animation_ornmn"]
resource_name = "new_animation"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, 7), Vector2(4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72eq1"]
_data = {
"new_animation": SubResource("Animation_ornmn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ko15s"]

[node name="game_over" type="CanvasLayer"]
script = ExtResource("1_42437")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(216, 195)
scale = Vector2(7, 7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_72eq1")
}
autoplay = "new_animation"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -39.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="highest_score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_mx0mp")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="current_score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_mx0mp")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mcyia")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ko15s")
text = "Press to Restart"
flat = true
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 19.0
offset_top = 174.0
offset_right = 155.0
offset_bottom = 223.0

[node name="medal_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_mx0mp")
theme_override_font_sizes/font_size = 48
text = "Medal"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
